# FastAPI

./: .env  async-await-sample.py  decorator.py  demo-with-gen-ai.py  diff-request-body-types.py  main.py  prod-grade-env-sample.py  pydantic-sample.py  pyproject.toml
application/: config.py  main.py
application/models/: chat.py
application/routers/: chat.py
application/services/: groq_services.py
