[project]
name = "zfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.32",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "pydantic-settings>=2.14.1",
]
